fixed issue with app overflow-x

--- a/client/src/components/navbar/styles.scss
+++ b/client/src/components/navbar/styles.scss
@@ -1,6 +1,6 @@
 .nav {
   border-bottom: 1px solid #999999;
-  width: 100vw;
+  max-width: 100vw;
 
   &__links {
     display: grid;
