--- a/client/src/styles/global/_base.scss
+++ b/client/src/styles/global/_base.scss
@@ -8,5 +8,4 @@
 
 html {
   font-family: "Montserrat", sans-serif;
-  overflow-x: hidden;
 }
