--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;600;700;900&display=swap");
 
 .app-container {
-  width: 100vw;
+  max-width: 100vw;
   min-height: 100vh;
   // background-color: #ddd;
 }
